# envsubst

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: e2e.sh
src/: env_context.rs  main.rs
testdata/integration/nested/: service.conf
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/testdata/integration/: template.yaml
